installed node packages

--- a/css/style.css
+++ b/css/style.css
@@ -1,47 +1,32 @@
-
-
 body {
-    font-family: "Special Elite", "sans-serif";
-    background-image: linear-gradient(#35393C, #397367,#63CCCA);
-}
+  font-family: "Special Elite", "sans-serif";
+  background-image: linear-gradient(#35393C, #397367, #63CCCA); }
 
 header {
-    font-family: "Indie Flower", "sans-serif";
-    background-image: linear-gradient(#397367, #35393C);
-    color: beige;
-}
+  font-family: "Indie Flower", "sans-serif";
+  background-image: linear-gradient(#397367, #35393C);
+  color: beige; }
 
 .header-ribbon {
-    font-family: "Indie Flower", "sans-serif";
-    background-color: #42858C;
-    color: beige;
-}
+  font-family: "Indie Flower", "sans-serif";
+  background-color: #42858C;
+  color: beige; }
 
 h3 {
-    text-align: center;
-}
+  text-align: center; }
 
 img ~ h5 {
-    margin-top: 20px;
-    margin-bottom: 20px;
-} 
+  margin-top: 20px;
+  margin-bottom: 20px; }
 
 .card {
-    background-color: bisque;
-}
+  background-color: bisque; }
 
 #centerPaper {
-    background-color: bisque;
-}
-
-#LHPapers {
-
-}
-
-#RHPapers {
-
-}
+  background-color: bisque; }
 
 hr {
-    border: 1px dashed #63CCCA;
-}
+  border: 1px dashed #63CCCA; }
+
+img.profilePic {
+  border: 5px dashed #63CCCA; }
